@@ -14,6 +14,8 @@
 package tech.pegasys.teku.spec.generator.signatures;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.Optional;
 import org.apache.logging.log4j.LogManager;
@@ -27,8 +29,8 @@ public class NoOpRemoteSigner extends NoOpSigner {
   public Optional<URL> getSigningServiceUrl() {
     Optional<URL> result;
     try {
-      result = Optional.of(new URL("http://example.com/"));
-    } catch (MalformedURLException e) {
+      result = Optional.of(new URI("http://example.com/").toURL());
+    } catch (MalformedURLException | URISyntaxException e) {
       result = Optional.empty();
       LOG.error("Failed to get signing service URL", e);
     }
