@@ -18,6 +18,7 @@ import static tech.pegasys.teku.networks.Eth2NetworkConfiguration.DEFAULT_VALIDA
 
 import java.net.MalformedURLException;
 import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Path;
 import java.time.Duration;
@@ -67,7 +68,7 @@ public class ValidatorConfig {
   public static final boolean DEFAULT_BUILDER_REGISTRATION_DEFAULT_ENABLED = false;
   public static final boolean DEFAULT_VALIDATOR_BLINDED_BLOCKS_ENABLED = false;
   public static final int DEFAULT_VALIDATOR_REGISTRATION_SENDING_BATCH_SIZE = 100;
-  public static final UInt64 DEFAULT_BUILDER_REGISTRATION_GAS_LIMIT = UInt64.valueOf(30_000_000);
+  public static final UInt64 DEFAULT_BUILDER_REGISTRATION_GAS_LIMIT = UInt64.valueOf(36_000_000);
   public static final boolean DEFAULT_OBOL_DVT_SELECTIONS_ENDPOINT_ENABLED = false;
   public static final boolean DEFAULT_ATTESTATIONS_V2_APIS_ENABLED = false;
 
@@ -744,12 +745,12 @@ public class ValidatorConfig {
           source -> {
             if (source.contains(":")) {
               try {
-                final URL url = new URL(source);
+                final URL url = new URI(source).toURL();
                 if (hostAndPortMatching(url, validatorExternalSignerUrl)) {
                   LOG.warn(
                       "'--validators-external-signer-public-keys' contains an URL matching the external-signer-url host and port. Use 'external-signer' instead if you want to use all public keys exposed by the external signer");
                 }
-              } catch (MalformedURLException e) {
+              } catch (MalformedURLException | URISyntaxException e) {
                 throw new InvalidConfigurationException(
                     "Invalid configuration. '--validators-external-signer-public-keys' contains a malformed URL: "
                         + source);
